Fix header on the About page (overflow); reduce font weight for h1

--- a/src/Styles/global.less
+++ b/src/Styles/global.less
@@ -164,6 +164,14 @@
 
 /* Overrides */
 
+h1.ant-typography {
+  font-weight: normal;
+
+  @media (max-width: @mobile-display-width) {
+    font-size: 2rem;
+  }
+}
+
 .ant-alert {
   height: fit-content;
   margin: auto;
